[package]
name = "hyper-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
rustls = "0.23.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls = {version = "0.26.0"}
webpki-roots = "0.26.6"
